{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 433,
  "lineage": "07b267a7-5106-c0e1-6626-819104cd52b7",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:577738207511:internet-gateway/igw-0231bed02b55238a5",
            "id": "igw-0231bed02b55238a5",
            "owner_id": "577738207511",
            "tags": {
              "Name": "VPC Internet Gateway"
            },
            "vpc_id": "vpc-01f9fc8ab081fc342"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04263a8ea92ed733d",
            "owner_id": "577738207511",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0231bed02b55238a5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for VPC"
            },
            "vpc_id": "vpc-01f9fc8ab081fc342"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.project_igw",
            "module.aws_vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d7698b641bd0368",
            "route_table_id": "rtb-04263a8ea92ed733d",
            "subnet_id": "subnet-0b9858cf1fe014410"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.project_igw",
            "module.aws_vpc.aws_route_table.project_rt",
            "module.aws_vpc.aws_subnet.project_sn",
            "module.aws_vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:577738207511:subnet/subnet-0b9858cf1fe014410",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b9858cf1fe014410",
            "map_public_ip_on_launch": true,
            "owner_id": "577738207511",
            "vpc_id": "vpc-01f9fc8ab081fc342"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.project_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:577738207511:subnet/subnet-03c0b7c83311f1a4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03c0b7c83311f1a4f",
            "map_public_ip_on_launch": true,
            "owner_id": "577738207511",
            "vpc_id": "vpc-01f9fc8ab081fc342"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:577738207511:vpc/vpc-01f9fc8ab081fc342",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-061962d55cd35ec8c",
            "default_route_table_id": "rtb-0f41713650b065dec",
            "default_security_group_id": "sg-0e46a065b5527808f",
            "dhcp_options_id": "dopt-fac3f89c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01f9fc8ab081fc342",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f41713650b065dec",
            "owner_id": "577738207511",
            "tags": {
              "Name": "production"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_webserver_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:577738207511:security-group/sg-0566c41525cb84f19",
            "description": "Allow SSH connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0566c41525cb84f19",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServerSG",
            "name_prefix": null,
            "owner_id": "577738207511",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01f9fc8ab081fc342"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.project_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.test_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "project_test_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc8d444ee2a42d8a",
            "arn": "arn:aws:ec2:eu-west-1:577738207511:instance/i-02e1d47939d787b58",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e1d47939d787b58",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JonathanQA",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0344991c16601e206",
            "private_dns": "ip-10-0-1-85.eu-west-1.compute.internal",
            "private_ip": "10.0.1.85",
            "public_ip": "34.243.243.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-031869db82c787ae4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b9858cf1fe014410",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0566c41525cb84f19"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.project_sn",
            "module.aws_vpc.aws_vpc.project_vpc",
            "module.aws_webserver_sg.aws_security_group.project_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.test_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "project_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc8d444ee2a42d8a",
            "arn": "arn:aws:ec2:eu-west-1:577738207511:instance/i-07303e7f8ea2a1a0f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07303e7f8ea2a1a0f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JonathanQA",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-003e3c7154878c481",
            "private_dns": "ip-10-0-1-17.eu-west-1.compute.internal",
            "private_ip": "10.0.1.17",
            "public_ip": "63.32.168.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0de61a92eca4d2c21",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b9858cf1fe014410",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0566c41525cb84f19"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.project_sn",
            "module.aws_vpc.aws_vpc.project_vpc",
            "module.aws_webserver_sg.aws_security_group.project_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "project_test_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc8d444ee2a42d8a",
            "arn": "arn:aws:ec2:eu-west-1:577738207511:instance/i-05014713084841c05",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05014713084841c05",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JonathanQA",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03d99249cf17359a5",
            "private_dns": "ip-10-0-1-71.eu-west-1.compute.internal",
            "private_ip": "10.0.1.71",
            "public_ip": "18.202.243.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-013905920ab74c5c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b9858cf1fe014410",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0566c41525cb84f19"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.project_sn",
            "module.aws_vpc.aws_vpc.project_vpc",
            "module.aws_webserver_sg.aws_security_group.project_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "project_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc8d444ee2a42d8a",
            "arn": "arn:aws:ec2:eu-west-1:577738207511:instance/i-01eaafc50434aa453",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01eaafc50434aa453",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JonathanQA",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03b68989879db8edc",
            "private_dns": "ip-10-0-1-123.eu-west-1.compute.internal",
            "private_ip": "10.0.1.123",
            "public_ip": "3.250.186.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00eada370deaeaf1d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b9858cf1fe014410",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0566c41525cb84f19"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.project_sn",
            "module.aws_vpc.aws_vpc.project_vpc",
            "module.aws_webserver_sg.aws_security_group.project_sg"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}